fix hover cursor on shifts in edit mode

--- a/client/stylesheets/inspinia/pages/_shifts.scss
+++ b/client/stylesheets/inspinia/pages/_shifts.scss
@@ -115,6 +115,7 @@
 			}
 
 			h3 {
+				cursor     : pointer;
 				margin     : 0;
 				padding    : 5px;
 				font-weight: 300;
